v<0.2.8>, <11/07/2022> -- Updated trained meta-models (better thresholding accuracy)
v<0.2.9>, <11/08/2022> -- 'native' parameter to 'auto' (code consistency)
v<0.2.9>, <11/19/2022> -- Stability fixes for vae, ocsvm, fwfm
v<0.2.9>, <11/22/2022> -- Format autopep8, isort
v<0.2.9>, <11/23/2022> -- Refactored
v<0.2.9>, <11/24/2022> -- Removed unused imports
v<0.2.9>, <12/18/2022> -- Added cpd thresholder
v<0.2.9>, <12/19/2022> -- Updated benchmarking documentation
v<0.2.9>, <12/21/2022> -- Documentation formatting
v<0.2.9>, <12/29/2022> -- Over prediction documentation
v<0.2.9>, <01/02/2023> -- Added GNBC model to meta
v<0.3.0>, <01/23/2023> -- Added comb thresholder
v<0.3.0>, <01/29/2023> -- Added examples in docstrings for handling effects of randomness
v<0.3.0>, <02/16/2023> -- Replaced try-except statements for better coverage
v<0.3.0>, <02/25/2023> -- Updated documentation (links, formatting)
v<0.3.0>, <03/09/2023> -- Added package to conda-forge and doc updates
v<0.3.0>, <03/12/2023> -- Added FAQ, Pull request, and additional doc changes
v<0.3.0>, <03/19/2023> -- Updated clf thresholder
v<0.3.0>, <03/20/2023> -- Added GNBM model to meta
v<0.3.1>, <04/13/2023> -- Added pre-commit and formatted
v<0.3.1>, <04/27/2023> -- Added grp and srp methods to decomp
v<0.3.1>, <05/02/2023> -- Python 3.11
v<0.3.1>, <05/03/2023> -- Removed ALL thresholder
v<0.3.1>, <05/03/2023> -- Created citation
v<0.3.2>, <05/10/2023> -- Updated FAQ
v<0.3.2>, <05/24/2023> -- Added gitignore
v<0.3.2>, <05/28/2023> -- Upgraded mtt t-dist
v<0.3.2>, <05/28/2023> -- Added Code Climate integration
v<0.3.2>, <06/16/2023> -- Fixed comb and changed to mode as default
v<0.3.2>, <06/16/2023> -- Removed Python 3.7 from testing
v<0.3.2>, <06/18/2023> -- Added model to comb and set as default
v<0.3.2>, <06/25/2023> -- Changed model to bagged, added stacked, and set as default
v<0.3.2>, <06/30/2023> -- Updated benchmarks and use of LaplaceGaussianNB